--- a/index.html
+++ b/index.html
@@ -16,18 +16,18 @@
 <body>
 <div id="shim"></div>
 <div id="content">
-	<div class="logo_box"><h1>Your<br/>Company<br/>Name</h1></div>          
+	<div class="logo_box"><h1>NeuShield, Inc.</h1></div>          
 	<div class="main_box">
 		<h2>Our website is coming soon.<br/><span>In the mean time connect with us with the information below</span></h2>
 		
 		<ul class="info">
 			<li>
 				<h3>P</h3>
-				<p>866-599-5350<br/>403-926-8331</p>
+				<p>866-555-1212<br/>510-555-1212</p>
 			</li>
 			<li>
 				<h3>A</h3>
-				<p>301 Clematis. Suite 3000<br/>West Palm Beach, FL 33401</p>
+				<p>200 Brown Road, Suite 306D<br/>Fremont, CA 94539</p>
 			</li>
 			<li>
 				<h3>S</h3>
