--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
 <body>
 <div id="shim"></div>
 <div id="content">
-	<div class="logo_box"><h1>NeuShield, Inc.</h1></div>          
+	<div class="logo_box"><h1>NeuShield,<br/>Company<br/>Inc.</h1></div>          
 	<div class="main_box">
 		<h2>Our website is coming soon.<br/><span>In the mean time connect with us with the information below</span></h2>
 		
 		<ul class="info">
 			<li>
 				<h3>P</h3>
-				<p>866-555-1212<br/>510-555-1212</p>
+				<p>888-555-1212<br/>510-555-1212</p>
 			</li>
 			<li>
 				<h3>A</h3>
