--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <div id="shim"></div>
 <div id="content">
-	<div class="logo_box"><h1>NeuShield, Inc.</h1></div>          
+	<div class="logo_box"><h1>"NeuShield, Inc."</h1></div>          
 	<div class="main_box">
 		<h2>Our website is coming soon.<br/><span>In the mean time connect with us with the information below</span></h2>
 		
@@ -33,8 +33,8 @@
 				<h3>S</h3>
 				<p class="social">
 					<a href="#" class="tw"></a>
-					<a href="#" class="fb"></a>				
-					<a href="#" class="li"></a>
+					<a href="https://www.facebook.com/NeuShield-305540643211348/" class="fb"></a>				
+					<a href="https://www.linkedin.com/company/neushield-inc" class="li"></a>
 				</p>
 			</li>
 		</ul>
