--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 <body>
 <div id="shim"></div>
 <div id="content">
-	<div class="logo_box"><h1>"NeuShield, Inc."</h1></div>          
+	<div class="logo_box"><h1>NeuShield,Inc.</h1></div>          
 	<div class="main_box">
 		<h2>Our website is coming soon.<br/><span>In the mean time connect with us with the information below</span></h2>
 		
