--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 			<li>
 				<h3>S</h3>
 				<p class="social">
-					<a href="#" class="tw"></a>
+					<a href="https://twitter.com/neushield" class="tw"></a>
 					<a href="https://www.facebook.com/NeuShield-305540643211348/" class="fb"></a>				
 					<a href="https://www.linkedin.com/company/neushield-inc" class="li"></a>
 				</p>
